Fix frankfurter tests